@@ -1,14 +1,17 @@
 package fr.sf.once;
 
+import java.io.BufferedReader;
 import java.io.Closeable;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Documentation {
     public static final Path ASCIIDOC_OUTPUT_PATH = Paths.get("docs", "asciidoc");
@@ -21,25 +24,22 @@ public class Documentation {
         assertPathExists(ASCIIDOC_OUTPUT_PATH);
         assertPathExists(HTML_OUTPUT_PATH);
 
-//        getLogHistory();
-        
         generateMainDocumentation();
 
-        
         Documentation doc = new Documentation();
-         doc.generateTestDoc();
-         doc.generateConfigurationFile();
-         doc.generateDomainDoc();
+        doc.generateTestDoc();
+        doc.generateConfigurationFile();
+        doc.generateDomainDoc();
+        doc.generateChangeLog();
 
-        
-         doc.generateArchi();
+        doc.generateArchi();
         // doc.allFiles(".\\src\\main\\java");
 
-         generateMainDocumentation();
+        generateMainDocumentation();
     }
 
     public static final String OUTPUT_FILE_NAME = "once";
-    
+
     public static class AsciidocWriter extends Asciidoc implements Closeable {
 
         public AsciidocWriter(File file) throws IOException {
@@ -48,41 +48,39 @@ public class Documentation {
 
         @Override
         public void close() throws IOException {
-           getWriter().close();
+            getWriter().close();
         }
-        
+
     }
-    
+
     private static void generateMainDocumentation() throws IOException {
-        
+
         try (AsciidocWriter adoc = new AsciidocWriter(Documentation.ASCIIDOC_OUTPUT_PATH.resolve(OUTPUT_FILE_NAME + ".asciidoc").toFile())) {
             adoc
-                .title(1, "Once")
-                .tableOfContent()
-                .split()
-                .blankLine()
-                ;
+                    .title(1, "Once")
+                    .tableOfContent()
+                    .split()
+                    .blankLine();
 
             adoc
-                .changeLevelOffset(1)
-                .include(DomainDoclet.OUTPUT_FILE_NAME + ".asciidoc")
-                .include(ConfigurationDoclet.OUTPUT_FILE_NAME + ".asciidoc")
-                .include(ArchiDoc.OUTPUT_FILE_NAME + ".asciidoc")
-                .changeLevelOffset(0);
-                
-            adoc
-                .title(2, "Dossier de test")
-                .link("../html/testdoc.html", "Dossier de test");
+                    .changeLevelOffset(1)
+                    .include(DomainDoclet.OUTPUT_FILE_NAME + ".asciidoc")
+                    .include(ConfigurationDoclet.OUTPUT_FILE_NAME + ".asciidoc")
+                    .include(ArchiDoc.OUTPUT_FILE_NAME + ".asciidoc")
+                    .changeLevelOffset(0);
 
-            
+            adoc
+                    .title(2, "Other resources")
+                    .link("testdoc.html", "Test plan")
+                    .link("changelog.html", "Change log");
+
             adoc.blankLine();
-        
-        }
-        
-        generateHtmlFromAsciidoc(Documentation.ASCIIDOC_OUTPUT_PATH, Documentation.HTML_OUTPUT_PATH, OUTPUT_FILE_NAME);
-        
-    }
 
+        }
+
+        generateHtmlFromAsciidoc(Documentation.ASCIIDOC_OUTPUT_PATH, Documentation.HTML_OUTPUT_PATH, OUTPUT_FILE_NAME);
+
+    }
 
     private static void assertPathExists(Path path) {
         if (!path.toFile().exists()) {
@@ -92,13 +90,15 @@ public class Documentation {
 
     private void generateArchi() throws FileNotFoundException {
         new ArchiDoc().generateArchi();
+        Documentation.generateHtmlFromAsciidoc(Documentation.ASCIIDOC_OUTPUT_PATH, Documentation.HTML_OUTPUT_PATH, "archi");
+        
     }
 
     private void generateConfigurationFile() throws Exception {
         generateJavadoc("GenerateConfigurationDoc", ConfigurationDoclet.class, Paths.get("..", "once-core", "src", "main", "java"), "fr.sf");
 
         Documentation.generateHtmlFromAsciidoc(Documentation.ASCIIDOC_OUTPUT_PATH, Documentation.HTML_OUTPUT_PATH, "configuration");
-      //  new ConfigurationDoc().generateConfigurationFile();
+        // new ConfigurationDoc().generateConfigurationFile();
     }
 
     public void generateDomainDoc() throws FileNotFoundException {
@@ -110,7 +110,12 @@ public class Documentation {
         generateJavadoc("GenerateTestDoc", TestDoclet.class, Paths.get("..", "once-core", "src", "test", "java"), "fr.sf");
         generateHtmlFromAsciidoc(ASCIIDOC_OUTPUT_PATH, HTML_OUTPUT_PATH, TestDoclet.OUTPUT_FILE_NAME);
     }
-
+    
+    private void generateChangeLog() throws FileNotFoundException {
+        new ChangeLogDoc().generate();
+        Documentation.generateHtmlFromAsciidoc(Documentation.ASCIIDOC_OUTPUT_PATH, Documentation.HTML_OUTPUT_PATH, "changelog");
+    }
+    
     public void allFiles(String rootPath) {
         Path dir = Paths.get(rootPath);
         if (dir.toFile().isFile()) {
@@ -155,7 +160,7 @@ public class Documentation {
         Runtime rt = Runtime.getRuntime();
         try {
             Path GRAPHVIZ_HOME = Paths.get("C:", "My Program Files", "Graphviz2.38", "bin");
-            
+
             rt.exec(new String[] { GRAPHVIZ_HOME.resolve("dot").toFile().getAbsolutePath(),
                     "-Tpng",
                     "-o" + htmlOutputPath.resolve(filename + ".png").toFile().getAbsolutePath(),
@@ -167,21 +172,19 @@ public class Documentation {
     }
 
     public static List<String> getLogHistory() {
-        Runtime rt = Runtime.getRuntime();
         try {
-            Path GRAPHVIZ_HOME = Paths.get("C:", "My Program Files", "Graphviz2.38", "bin");
-            Process p = rt.exec(new String[] { "git",
+            Process process = Runtime.getRuntime().exec(new String[] { "git",
                     "log",
                     "--pretty=format:%s" });
 
-            // TODO
+            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+            return reader.lines().collect(Collectors.toList());
         } catch (IOException e) {
             e.printStackTrace();
         }
         return null;
     }
 
-    
     private Class<?> getClazz(String className) {
         try {
             return Class.forName(className);
